Minor clean up on the client code.  It currently supports client_credentials & user id/password.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # Add any directories, files, or patterns you don't want to be tracked by version control
 Library/**
 Temp/**
-KnetikSDK.sln
-KnetikSDK.csproj
-KnetikSDK.Editor.csproj
+knetikcloud-unity-sdk.sln
+knetikcloud-unity-sdk.csproj
+knetikcloud-unity-sdk.Editor.csproj
 **\.mdb**
 **\.pdb**
 **/\.vs/**
